# pmf-telemetry-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: research.ipynb
src/: app.py
src/config/: settings.py
src/engine/: ai_driving_analysis.py  loader.py  network.py
src/graphics/: charts.py  maps.py
src/utils/: data_import.py  images64.py  plot_track_map.py
