[project]
name = "pmf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastf1>=3.6.1",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.0",
]
